--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,16 +8,41 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="AppTheme.Dark" parent="Theme.AppCompat.NoActionBar">
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/colorAccent</item>
+    </style>
+
+    <style name="SignUpToolbarTheme"
+        parent="@style/ThemeOverlay.AppCompat.Dark">
+        <item name="colorControlNormal">@android:color/white</item>
+        <item name="titleTextColor">@android:color/white</item>
+    </style>
+
     <style name="edittext">
+    <item name="android:layout_width">match_parent</item>
+    <item name="android:layout_height">wrap_content</item>
+    <item name="android:layout_marginRight">32dp</item>
+    <item name="android:layout_marginLeft">32dp</item>
+    <item name="android:layout_marginTop">8dp</item>
+    <item name="android:background">@drawable/edittext_shape</item>
+    <item name="android:drawablePadding">16dp</item>
+    <item name="android:textColor">@android:color/white</item>
+    <item name="android:textColorHint">@color/transparent_hint</item>
+</style>
+
+    <style name="edittext_signup">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_marginRight">32dp</item>
         <item name="android:layout_marginLeft">32dp</item>
-        <item name="android:layout_marginTop">8dp</item>
-        <item name="android:background">@drawable/edittext_shape</item>
+        <item name="android:layout_marginTop">16dp</item>
         <item name="android:drawablePadding">16dp</item>
+        <item name="android:background">@color/transparent_grey</item>
         <item name="android:textColor">@android:color/white</item>
-        <item name="android:textColorHint">@android:color/white</item>
+        <item name="android:textColorHint">@color/transparent_hint</item>
+        <item name="android:textSize">16sp</item>
     </style>
 
     <style name="button_login">
@@ -32,6 +57,18 @@
         <item name="android:textColor">@color/colorPrimary</item>
     </style>
 
+    <style name="button_answer">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginLeft">32dp</item>
+        <item name="android:layout_marginTop">24dp</item>
+        <item name="android:layout_marginRight">32dp</item>
+        <item name="android:background">@drawable/button_rounded</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/colorPrimary</item>
+    </style>
+
     <style name="textview_login">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
@@ -40,6 +77,16 @@
         <item name="android:layout_marginRight">32dp</item>
         <item name="android:textColor">@android:color/white</item>
         <item name="android:textSize">16sp</item>
+    </style>
+
+    <style name="textview_signup">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginLeft">32dp</item>
+        <item name="android:layout_marginTop">32dp</item>
+        <item name="android:layout_marginRight">32dp</item>
+        <item name="android:textColor">@android:color/white</item>
+        <item name="android:textSize">20sp</item>
     </style>
 
 </resources>
