--- a/app/src/main/res/layout/fragment_weight_height.xml
+++ b/app/src/main/res/layout/fragment_weight_height.xml
@@ -24,7 +24,7 @@
             android:id="@+id/edittext_weight"
             style="@style/edittext_signup"
             android:ems="10"
-            android:inputType="number"
+            android:inputType="numberDecimal"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textview_weight" />
@@ -41,7 +41,7 @@
             android:id="@+id/edittext_desiredweight"
             style="@style/edittext_signup"
             android:ems="10"
-            android:inputType="number"
+            android:inputType="numberDecimal"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textview_desiredweight" />
