--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/gradient"
-    tools:context=".LogInActivity"
+    tools:context=".screens.login.LogInActivity"
     android:fitsSystemWindows="true">
 
     <ImageView
@@ -59,7 +59,8 @@
         android:text="@string/login"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edittext_password" />
+        app:layout_constraintTop_toBottomOf="@+id/edittext_password"
+        android:onClick="login"/>
 
     <TextView
         android:id="@+id/textview_signup"
