--- a/app/src/main/res/menu/recipe_menu.xml
+++ b/app/src/main/res/menu/recipe_menu.xml
@@ -7,4 +7,9 @@
         android:title="@string/search"
         app:actionViewClass="android.support.v7.widget.SearchView"
         app:showAsAction="ifRoom|collapseActionView" />
+    <item
+        android:id="@+id/action_filter"
+        android:title="@string/filter"
+        android:icon="@drawable/ic_filter_list_white_24dp"
+        app:showAsAction="ifRoom|collapseActionView"/>
 </menu>
