--- a/app/src/main/res/layout/activity_sleep.xml
+++ b/app/src/main/res/layout/activity_sleep.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimary"
-    tools:context=".screens.SleepActivity">
+    tools:context=".screens.logging.sleep.LogSleepActivity">
 
 
     <com.yinglan.circleviewlibrary.CircleAlarmTimerView
