--- a/app/src/main/res/layout/activity_water_animation.xml
+++ b/app/src/main/res/layout/activity_water_animation.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".screens.WaterAnimationActivity">
+    tools:context=".screens.logging.water.WaterAnimationActivity">
 
     <ImageView
         android:id="@+id/imageview_animation"
