--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -24,8 +24,8 @@
                 android:id="@+id/imageview_shape"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:scaleType="fitStart"
                 android:adjustViewBounds="true"
+                android:scaleType="fitStart"
                 android:src="@drawable/main_shape" />
 
             <android.support.constraint.ConstraintLayout
@@ -96,38 +96,58 @@
                     app:layout_constraintTop_toTopOf="parent">
 
                     <com.budiyev.android.circularprogressbar.CircularProgressBar
+                        android:id="@+id/progressbar"
                         android:layout_width="200dp"
                         android:layout_height="180dp"
                         android:layout_marginEnd="8dp"
-                        app:progress="590"
+                        android:theme="@style/AppTheme.WhiteAccent"
                         app:animateProgress="true"
-                        app:maximum="2000"
+                        app:backgroundStrokeColor="@android:color/white"
                         app:foregroundStrokeColor="@android:color/white"
                         app:foregroundStrokeWidth="5dp"
-                        app:backgroundStrokeColor="@android:color/white"
-                        android:theme="@style/AppTheme.WhiteAccent" />
+                        app:maximum="2000"
+                        app:progress="590" />
 
-                    <TextView
+                    <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
-                        android:gravity="center"
-                        android:textColor="@android:color/white"
-                        android:textSize="18sp"
-                        android:text="2000 \n CALORIES" />
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:id="@+id/textview_goalcalories"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:gravity="center"
+                            android:text="2000"
+                            android:textColor="@android:color/white"
+                            android:textSize="18sp" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_horizontal|bottom"
+                            android:gravity="center"
+                            android:text="@string/calories_main"
+                            android:textColor="@android:color/white"
+                            android:textSize="18sp" />
+                    </LinearLayout>
+
                 </FrameLayout>
+
 
             </android.support.constraint.ConstraintLayout>
         </FrameLayout>
 
         <TextView
-            android:id="@+id/page_title"
+            android:id="@+id/textview_date"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center"
             android:layout_marginTop="8dp"
+            android:gravity="center"
             android:text="Today"
-            android:textSize="16sp"/>
+            android:textSize="16sp" />
 
         <include layout="@layout/card_meal_main" />
 
